# USDT_BOT_GLM5.1

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_Recomend.md  Dockerfile  Dockerfile.webapp  IDEA.md  NEW_AGENTS.md  PLAN.md  PLAN_DETAILED.md  alembic.ini  audit_report.md  docker-compose.yml  nginx.conf  pyproject.toml
.archive/: FULL_TZ.md
.kilo/: kilo.json
.kilo/plans/: 1779698212806-silent-forest.md  1779708655493-witty-otter.md  1779719627083-proud-wolf.md  1779827296549-nimble-wizard.md  1779834973323-gentle-harbor.md  1779850659040-lucky-moon.md  1779973784925-hidden-mountain.md  1780008096429-lucky-cabin.md
app/: bot.py  config.py  health.py  main.py
app/api/: __init__.py  app.py  auth.py  deps.py  exceptions.py  middleware.py
app/database/: base.py  engine.py  types.py
app/fsm/: __init__.py  links_states.py  order_states.py  rate_states.py  role_states.py  statistics_states.py  support_states.py
app/handlers/: __init__.py  start.py
app/keyboards/: __init__.py  admin_kb.py  calendar_kb.py  cancel_kb.py  client_kb.py  inline_kb.py  (+2 more)
docs/: AGENTS.md  API_MAPPING.md  INTEGRATION_PLAN.md  INTEGRATION_REPORT.md  architecture.md  database.md  integration-plan.md  issues.md  modules.md  quickstart.md  risks.md  roadmap.md  roles.md  scenarios.md  setup.md  stack.md  status.md
docs20/: INDEX.md  architecture.md  database.md  roles.md  scenarios.md
migrations/: env.py
tests/: conftest.py  test_encryption.py  test_services.py
webapp/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+99 files in other folders)
